# polkadot-chat-agents

./: .gitignore  CLAUDE.md  README.md  package.json
.github/workflows/: ci.yml  docs.yml
bot-core/: README.md  cli.mjs  index.mjs  media-analyzer.mjs  package-lock.json  package.json  t3ams.mjs  test-client-device.mjs  test-client.mjs
bot-core/.papi/: polkadot-api.json
bot-core/lib/: agent-runtime.mjs  chunk.mjs  claude-sandbox.mjs  commands.mjs  descriptors.mjs  file-commands.mjs  file-store.mjs  hop-client.mjs  keyed-dispatcher.mjs  live-reply.mjs  media-store.mjs  outbound-lanes.mjs  register.mjs  runners.mjs  runtime-topology.mjs  session-store.mjs  t3ams-agent-session.mjs  t3ams-agent-turn.mjs  t3ams-attachments.mjs  t3ams-channel-context.mjs  t3ams-identity.mjs  t3ams-known-chats.mjs  t3ams-media-budget.mjs  t3ams-media.mjs  t3ams-protocol.mjs  t3ams-routing.mjs  t3ams-submission.mjs  testnet-file-allowance.mjs  tool-policy.mjs  transport-entrypoint.mjs  workspaces.mjs
bot-core/scripts/: sync-descriptors.mjs
bot-core/test/: agent-runtime.test.mjs  chunk.test.mjs  claude-sandbox.test.mjs  cli.test.mjs  codec.test.mjs  commands.test.mjs  file-commands.test.mjs  file-store.test.mjs  hop-client.test.mjs  keyed-dispatcher.test.mjs  live-reply.test.mjs  media-store.test.mjs  mock-hop-node.mjs  (+23 more)
docs/: APP-FEEDBACK.md  CONFIGURATION.md  DESIGN.md  HARNESSES.md  LIVE-REPLIES.md  ROADMAP.md  T3AMS.md  TEST-ROUND-TRIP.md  TESTING.md  package.json
docs-site/: index.md  package-lock.json
tools/bandersnatch-cli/: Cargo.toml
tools/bandersnatch-cli/src/: main.rs
(+88 files in other folders)
